--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,7 @@
-MONGO_URI="mongodb://127.0.0.1:27017/ak_infradream_db"
+# MONGO_URI="mongodb://127.0.0.1:27017/ak_infradream_db"
 JWT_SECRET="your-super-secret-key-that-is-long-and-random"
 PORT=5000
+
+MONGO_URI=mongodb+srv://harshitmaurya2105_db_user:RhCOCWsaxK2cNdPR@cluster0.yrexttz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# JWT_SECRET="your-super-secret-key-that-is-long-and-random"
+# PORT=5000
